--- a/angularWorkSpace/Dockerfile
+++ b/angularWorkSpace/Dockerfile
@@ -6,6 +6,6 @@ COPY nginx.conf /etc/nginx/nginx.conf
 COPY billingApp_prep /usr/share/nginx/html/billingApp_prep
 COPY billingApp_prod /usr/share/nginx/html/billingApp_prod
 #expose app and 80 for nginx app
-EXPOSE 80 81
+EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
 
